objects/OpportunityAlerts__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Description__c</fullName>
        <label>Alert Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to__c</fullName>
        <label>Sent to</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <label>OpportunityAlerts</label>
    <listViews>
        <fullName>All_View</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <columns>Sent_to__c</columns>
        <columns>Alert__c</columns>
        <columns>Alert_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All View</label>
        <language>en_US</language>
    </listViews>
</CustomObject>